# EP

./: README.md
hw1/: .pre-commit-config.yaml  README.md  pyproject.toml
hw1/hw1/: linting.md  streamlit_app.py
project/: pipeline.py  requirements.txt
