[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Denis Tereshchenko <dotereschenko@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
openai = "^1.3.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 79

[tool.pylint."FORMAT"]
max-line-length = 79

[tool.isort]

[tool.flake8]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
